# basic-reference-rag-implementation

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  chainlit.md  docker-compose.yml  langgraph.json  pyproject.toml  startup.sh  test_agent.py  todo.md
.chainlit/: config.toml
evals/: golden_dataset.json
resources/: converstation_starters.csv
scripts/: structured_data_ingestion_pipeline.py  unstructured_data_ingestion_pipeline.py
src/: chainlit_app.py
src/agents/: __init__.py  agents.py  rag_agent.py
src/assistant/: __init__.py  context.py  graph.py  guardrails.py  prompts.py  secure_tools.py  sql_validator.py  state.py  tools.py  utils.py
src/core/: settings.py
src/react_agent/: basic_researcher_template.py  context.py  graph.py  guardrails.py  state.py  tools.py
tests/: test_sql_security.py
